5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1593_820.log
== TEST (2019-03-28 10:05:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = input("Qual o valor do saque? ")

# Quantidade de notas de R$ 50
valor // 50 = notas_R$50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$50 = valor % 50

# Quantidade de notas de R$ 10
notas_R$10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- ERROR:
File "XXXX", line 8
    valor // 50 = notas_R$50
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:32:44) 
-- CODE:
valor = input("Qual o valor do saque? ")

x = valor // 50
x = valor % 50

y = x // 10
y = x % 10

z = y // 2

print(int(x))
print(int(y))
print(int(z))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = valor // 50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:33:35) 
-- CODE:
valor = input("Qual o valor do saque? ")

x = valor // 50
x1 = valor % 50

y = x // 10
y1 = x % 10

z = y // 2

print(int(x))
print(int(y))
print(int(z))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = valor // 50
TypeError: unsupported operand type(s) for //: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:33:54) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x // 10
y1 = x % 10

z = y // 2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
4
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:33:58) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x // 10
y1 = x % 10

z = y // 2

print(int(x))
print(int(y))
print(int(z))

-- EXECUTION TIME:
0.15032
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
4
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:34:05) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x // 10
y1 = x % 10

z = y // 2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
4
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:34:12) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x // 10
y1 = x % 10

z = y // 2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
4
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:34:19) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x // 10
y1 = x % 10

z = y // 2

print(int(x))
print(int(y))
print(int(z))

-- EXECUTION TIME:
0.154327
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
4
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:34:19) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x // 10
y1 = x % 10

z = y // 2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
4
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:34:45) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x1 // 10
y1 = x1 % 10

z = y1 // 2

print(int(x))
print(int(y))
print(int(z))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:34:53) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x1 // 10
y1 = x1 % 10

z = y1 // 2

print(int(x))
print(int(y))
print(int(z))

-- EXECUTION TIME:
0.166847
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:35:40) 
-- CODE:
valor = int(input("Qual o valor do saque? "))

x = valor // 50
x1 = valor % 50

y = x1 // 10
y1 = x1 % 10

z = y1 // 2

print(int(x))
print(int(y))
print(int(z))

-- EXECUTION TIME:
0.12935
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
